This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

22-Dec-2004 (Lars Duening)  (3.3.635)
  - (pkg_tls, func_spec, configure) Incorporated the GNUTLS patches from Peng
       and Gawain: use the new gnutls parameter generation if available;
       properly handle threading; don't request a client certificate since we
       don't need it; and the new fun tls_available() returns whether the
       TLS package could be initialized or not (Bug #0000082).

22-Dec-2004 (Lars Duening)  (3.3.634)
  - (func_spec, efuns.c) New efun regexp_package() to determine the
       currently active default regexp package.

22-Dec-2004 (Lars Duening)  (3.3.633)
  - (prolang.y) The no-warn-deprecated opcodes weren't included in the
       size calculations for the lvalue indexing shuffling.
  - (lex.c, efuns.c) The overflow checking in the number parsing routine
       was overeager, causing Evermore to no longer boot. The checking
       now really compares against the largest possible number, instead
       of simply checking the sign (Bug #0000327).

21-Dec-2004 (Lars Duening)  (3.3.632)
  - (lex.c) The number parsing now recognizes overflows and forces these
       numbers to be LONG_MAX (Bug #0000327).
  - (mstrings.c) mstring_realloc_string() (used for example to append
       to strings) didn't check if the string was indirectly tabled,
       potentially freeing memory which was still in use otherwise
       (reported by Bardioc).
  - (settings/evermore) Updated to the latest version.
  - (prolang.y, interpret.c) The array indexing warnings are now controlled
       by the warn_deprecated pragma (Bug #0000325).

18-Dec-2004 (Lars Duening)  (3.3.631)
  - (interpret.c) Assignments to negative-sized ranges now throw
       an error; indexing of ranges with out of bounds limits generate
       warnings (Bug #0000325).
  - (interpret.c) In DEBUG mode: when setting up an inherited call, check