@@ -54,19 +54,22 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 635)
-(Parent-Version lpmud 3-3 634)
+(Project-Version lpmud 3-3 636)
+(Parent-Version lpmud 3-3 635)
 (Version-Log "
-  - (pkg_tls, func_spec, configure) Incorporated the GNUTLS patches from Peng
-       and Gawain: use the new gnutls parameter generation if available;
-       properly handle threading; don't request a client certificate since we
-       don't need it; and the new fun tls_available() returns whether the
-       TLS package could be initialized or not (Bug #0000082).
+  - (lex, efuns.c) Another small correction to the number parsing in to_int():
+        negative numbers exceeding the limits are properly mapped to INT_MIN,
+        not -INT_MAX. Unfortunately too large negative numbers seen by
+        the LPC compiler are still mapped to -INT_MAX due to the lack
+        of proper overflow handling in the compiler; however, the compiler
+        now emits a warning on these occasions.
+  - (comm.c, pkg-tls.c) More TLS bugfixes by Fippo and Peng (Bug #0000138 and
+        #0000140).
 ")
 (New-Version-Log 
 ""
 )
-(Checkin-Time "Wed, 22 Dec 2004 18:04:09 -0700")
+(Checkin-Time "Thu, 23 Dec 2004 12:22:06 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -104,7 +107,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.12 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.83 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.698 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.699 644))
   (HISTORY (lpmud/f/49_HISTORY 1.385.1.2 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -113,13 +116,13 @@
   (src/configure (lpmud/d/0_configure 1.19.1.109.1.1 755))
   (src/config.h.in (lpmud/d/1_config.h 1.41.1.4.1.8.1.43 644))
   (src/machine.h.in (lpmud/b/9_machine.h. 1.9.1.14 644))
-  (src/Makefile.in (lpmud/d/17_Makefile.i 1.37.1.39.1.19.1.34 644))
+  (src/Makefile.in (lpmud/d/17_Makefile.i 1.37.1.39.1.19.1.34.1.1 644))
   (src/mkinstalldirs (lpmud/c/4_mkinstalld 1.1 644))
   (src/install-sh (lpmud/c/5_install-sh 1.2 755))
   (src/ldmud-man.txt (lpmud/c/c/29_ldmud-man. 1.1 644))
 
   (src/autoconf/configure.in (lpmud/d/7_configure. 1.20.1.9.1.100 644))
-  (src/autoconf/acconfig.h (lpmud/d/10_acconfig.h 1.6.1.13 644))
+  (src/autoconf/acconfig.h (lpmud/d/10_acconfig.h 1.6.1.14 644))
 
   (src/settings/README (lpmud/c/22_README 1.14.1.16 644))
   (src/settings/default (lpmud/c/23_default 1.13.1.5.1.50 744))
@@ -164,7 +167,7 @@
   (src/actions.h (lpmud/d/11_actions.h 1.6.1.7 644))
   (src/actions.c (lpmud/d/12_actions.c 1.15.1.48 644))
   (src/array.h (lpmud/f/47_array.h 1.18.1.22 644))
-  (src/array.c (lpmud/d/12_array.c 1.46.1.47.1.17 644))
+  (src/array.c (lpmud/d/12_array.c 1.46.1.47.1.18 644))
   (src/backend.h (lpmud/f/46_backend.h 1.20.1.7 644))
   (src/backend.c (lpmud/d/6_backend.c 1.68.1.35.1.38 644))
   (src/bitstrings.h (lpmud/i/47_bitstrings 1.3 644))
@@ -174,7 +177,7 @@
   (src/call_out.c (lpmud/d/5_call_out.c 1.34.1.30 644))
   (src/closure.h (lpmud/f/44_closure.h 1.7.1.22 644))
   (src/closure.c (lpmud/d/4_closure.c 1.41.1.47.1.26 644))
-  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.101 644))
+  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.102 644))
   (src/comm.h (lpmud/d/3_comm.h 1.26.1.41 644))
   (src/driver.h (lpmud/f/36_driver.h 1.15.1.27 644))
   (src/dumpstat.h (lpmud/f/35_dumpstat.h 1.8 644))
@@ -182,7 +185,7 @@
   (src/ed.h (lpmud/f/34_ed.h 1.5.1.6 644))
   (src/ed.c (lpmud/c/33_ed.c 1.32.1.35 644))
   (src/efuns.h (lpmud/l/20_efuns.h 1.13.1.19.1.6 644))
-  (src/efuns.c (lpmud/l/21_efuns.c 1.42.1.47.1.104.1.2 644))
+  (src/efuns.c (lpmud/l/21_efuns.c 1.42.1.47.1.104.1.3 644))
   (src/exec.h (lpmud/c/32_exec.h 1.34.1.33.1.7 644))
   (src/files.h (lpmud/i/49_files.h 1.2 644))
   (src/files.c (lpmud/i/50_files.c 1.26 644))
@@ -196,8 +199,8 @@
   (src/i-svalue_cmp.h (lpmud/a/b/20_i-svalue_c 1.4 644))
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.39 644))
   (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.79 644))
-  (src/lex.h (lpmud/b/11_lex.h 1.16.1.15.1.11 644))
-  (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.74.1.2 644))
+  (src/lex.h (lpmud/b/11_lex.h 1.16.1.15.1.12 644))
+  (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.74.1.3 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.19 644))
   (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.67 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.20 644))
@@ -206,8 +209,8 @@
   (src/md5.c (lpmud/l/19_md5.c 1.7 644))
   (src/mempools.h (lpmud/d/48_mempools.h 1.2.1.8 644))
   (src/mempools.c (lpmud/d/49_mempools.c 1.2.1.15 644))
-  (src/mregex.h (lpmud/e/29_rxcache.h 1.7.1.15 644))
-  (src/mregex.c (lpmud/e/30_rxcache.c 1.11.1.41 644))
+  (src/mregex.h (lpmud/e/29_rxcache.h 1.7.1.16 644))
+  (src/mregex.c (lpmud/e/30_rxcache.c 1.11.1.42 644))
   (src/mstrings.h (lpmud/i/35_mstrings.h 1.28 644))
   (src/mstrings.c (lpmud/i/36_mstrings.c 1.21.1.32 644))
   (src/my-alloca.h (lpmud/f/29_my-alloca. 1.3.1.2 644))
@@ -322,7 +325,7 @@
   (src/pkg-pgsql.c (lpmud/d/b/39_pkg-pgsql. 1.3 644))
   (src/pkg-pgsql.h (lpmud/d/b/40_pkg-pgsql. 1.2 644))
   (src/pkg-tls.h (lpmud/e/b/10_pkg-tls.h 1.7 644))
-  (src/pkg-tls.c (lpmud/e/b/11_pkg-tls.c 1.14 644))
+  (src/pkg-tls.c (lpmud/e/b/11_pkg-tls.c 1.15 644))
   (src/port.h (lpmud/38_port.h 1.30.1.4.1.20 644))
   (src/port.c (lpmud/39_port.c 1.17.1.9 644))
   (src/prolang.h (lpmud/f/19_prolang.h 1.17.1.5 644))
@@ -354,7 +357,7 @@
   (src/swap.h (lpmud/f/14_swap.h 1.7.1.3 644))
   (src/swap.c (lpmud/25_swap.c 1.36.1.51 644))
   (src/switch.h (lpmud/24_switch.h 1.9 644))
-  (src/typedefs.h (lpmud/d/50_typedefs.h 1.12.1.7 644))
+  (src/typedefs.h (lpmud/d/50_typedefs.h 1.12.1.8 644))
   (src/wiz_list.h (lpmud/1_wiz_list.h 1.5.1.7.1.3 644))
   (src/wiz_list.c (lpmud/2_wiz_list.c 1.13.1.14.1.5 644))
   (src/xalloc.h (lpmud/g/51_xalloc.h 1.25 644))
@@ -390,7 +393,7 @@
   (src/hosts/be/config.h (lpmud/e/34_config.h 1.32.1.40 644))
   (src/hosts/be/be.h (lpmud/e/35_be.h 1.7 644))
   (src/hosts/be/beyacc (lpmud/i/39_beyacc 1.1 744))
-  (src/hosts/be/Makefile (lpmud/e/37_Makefile 1.60.1.71.1.28 644))
+  (src/hosts/be/Makefile (lpmud/e/37_Makefile 1.60.1.71.1.29 644))
   (src/hosts/be/icon-32x32.raw (lpmud/s/37_icon-32x32 1.1 644) :no-keywords)
   (src/hosts/be/icon-16x16.raw (lpmud/s/38_icon-16x16 1.1 644) :no-keywords)
   (src/hosts/be/driver.rsrc (lpmud/s/39_driver.rsr 1.1 644) :no-keywords)
