@@ -29,7 +29,7 @@ typedef struct mapping_s          mapping_t;          /* mapping.h */
 typedef struct object_s           object_t;           /* object.h */
 typedef struct program_s          program_t;          /* exec.h */
 typedef struct pointer_table      ptrtable_t;         /* ptrtable.h */
-typedef struct regexp_s           regexp_t;           /* mregex.h */
+typedef struct regexp_s           regexp_t;           /* mregex.c */
 typedef struct replace_ob_s       replace_ob_t;       /* object.h */
 typedef struct rt_context_s       rt_context_t;       /* backend.h */
 typedef struct sentence_s         sentence_t;         /* sent.h */
